--- a/app/src/main/res/layout/horizontal_item.xml
+++ b/app/src/main/res/layout/horizontal_item.xml
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/Copertina"
             android:layout_gravity="center"
+            android:layout_marginBottom="3dp"
             android:layout_marginEnd="3dp"
             android:layout_marginStart="3dp"
             android:layout_marginTop="3dp"
@@ -52,6 +53,7 @@
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"
             android:textStyle="bold|italic"
+            card_view:layout_constraintBottom_toTopOf="@+id/autoreLibro"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toBottomOf="@+id/Copertina"
@@ -59,23 +61,34 @@
 
         <TextView
             android:id="@+id/autoreLibro"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
             android:layout_below="@+id/titololibro"
-            android:layout_gravity="center"
             android:layout_marginBottom="3dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
+            android:layout_marginStart="6dp"
+            android:ellipsize="end"
             android:fontFamily="sans-serif-condensed"
-            android:lineSpacingExtra="12sp"
-            android:textAlignment="center"
+            android:maxLines="1"
+            android:textAlignment="textStart"
             android:textColor="@color/cardview_dark_background"
             android:textSize="14sp"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintEnd_toStartOf="@+id/prezzo"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/titololibro"
             tools:text="Autore" />
+
+        <TextView
+            android:id="@+id/prezzo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="3dp"
+            android:fontFamily="sans-serif-condensed"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            card_view:layout_constraintBaseline_toBaselineOf="@+id/autoreLibro"
+            card_view:layout_constraintEnd_toEndOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
