Aggiunta divisione in categorie

--- a/app/src/main/res/layout/horizontal_layout.xml
+++ b/app/src/main/res/layout/horizontal_layout.xml
@@ -14,7 +14,7 @@
         android:layout_below="@+id/Categoria"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,16 +24,15 @@
         android:id="@+id/Categoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center|start"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:fontFamily="sans-serif-condensed"
         android:nestedScrollingEnabled="true"
         android:text="@string/categoria1"
-        android:textAlignment="viewStart"
         android:textAllCaps="false"
         android:textColor="@android:color/black"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
