--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_gravity="top"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
@@ -24,7 +23,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:transitionName="toolbar"
-            app:layout_scrollFlags="scroll|enterAlways"
             app:theme="@style/AppTheme.Toolbar"/>
 
     </android.support.design.widget.AppBarLayout>
@@ -34,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/sfondo"
-        android:elevation="10dp"
+        app:elevation="4.1dp"
         android:layout_gravity="bottom"
         app:itemIconTint="@color/colorPrimary"
         app:itemTextColor="@color/colorPrimary"
@@ -55,7 +53,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="?android:attr/actionBarSize"
         android:background="@color/sfondo"
-        android:nestedScrollingEnabled="true"
         android:scrollbars="none"
         android:elevation="4dp"
         android:visibility="gone"
